--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"bootstrap": "^5.1.3",
 		"photoswipe": "^4.1.3",
 		"select2": "^4.1.0-rc.0",
+		"lightgallery": "^2.4.0",
 		"slick-carousel": "^1.8.1",
 		"smooth-scroll": "^16.1.3",
 		"vanilla-lazyload": "^12.0.0"
